--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「离开世界之前 一切都是过程」"
+description: "「任何复杂系统，只要能被分解到最小，那么一定可以被做出来」"
 ---
 
 {% for post in paginator.posts %}
